add domain verification tag

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ Contact: zakariaelfakhry@gmail.com
 <!-- BEGIN HEAD -->
 <head>
 	<meta charset="utf-8"/>
+	<meta name="google-site-verification" content="OfQCPqUN6vPZotL1cc5AKeX93l4fdP0TZh3ieZnRmrM" />
 	<title>Color Sailing Advertising | High quality and professional advertising services - ColorSailing.com</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
