--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ Contact: zakariaelfakhry@gmail.com
 
 
     <!-- BEGIN THEME STYLES -->
-	<link href="assets/demos/default/css/plugins.css" rel="stylesheet" type="text/css"/>
-	<link href="assets/demos/default/css/components.css" id="style_components" rel="stylesheet" type="text/css"/>
-	<link href="assets/demos/default/css/themes/red2.css" rel="stylesheet" id="style_theme" type="text/css"/>
-	<link href="assets/demos/default/css/custom.css" rel="stylesheet" type="text/css"/>
+	<link href="assets/css/plugins.css" rel="stylesheet" type="text/css"/>
+	<link href="assets/css/components.css" id="style_components" rel="stylesheet" type="text/css"/>
+	<link href="assets/css/themes/red2.css" rel="stylesheet" id="style_theme" type="text/css"/>
+	<link href="assets/css/custom.css" rel="stylesheet" type="text/css"/>
 	<!-- END THEME STYLES -->
 
 	<link rel="shortcut icon" href="demos/default/favicon.ico"/>
@@ -58,10 +58,10 @@ Contact: zakariaelfakhry@gmail.com
 			<!-- BEGIN: BRAND -->
 			<div class="c-navbar-wrapper clearfix">
 				<div class="c-brand c-pull-left">
-					<a href="index.html" class="c-logo">
-						<img src="assets/base/img/layout/logos/logo-brand.png" alt="JANGO" class="c-desktop-logo">
-						<img src="assets/base/img/layout/logos/logo-brand-mobile-md.png" alt="JANGO" class="c-desktop-logo-inverse">
-						<img src="assets/base/img/layout/logos/logo-brand-mobile-md.png" alt="JANGO" class="c-mobile-logo">
+					<a href="/" class="c-logo">
+						<img src="assets/base/img/layout/logos/logo-brand.png" alt="ColorSailing" class="c-desktop-logo">
+						<img src="assets/base/img/layout/logos/logo-brand-mobile-md.png" alt="ColorSailing" class="c-desktop-logo-inverse">
+						<img src="assets/base/img/layout/logos/logo-brand-mobile-md.png" alt="ColorSailing" class="c-mobile-logo">
 					</a>
 										<button class="c-hor-nav-toggler" type="button" data-target=".c-mega-menu">
 					<span class="c-line"></span>
@@ -285,7 +285,7 @@ Contact: zakariaelfakhry@gmail.com
                 <li data-transition="fade" data-slotamount="1" data-masterspeed="1000">
                     <img
                         alt=""
-                        src="assets/base/img/content/backgrounds/bg-56.jpg"
+                        src="assets/base/img/content/backgrounds/bg-1.png"
                         data-bgposition="center center"
                         data-bgfit="cover"
                         data-bgrepeat="no-repeat"
@@ -436,13 +436,13 @@ Contact: zakariaelfakhry@gmail.com
 	<div class="container">
 		<div class="c-content-product-1 c-opt-1">
 			<div class="c-content-title-1">
-				<h3 class="c-center c-font-uppercase c-font-bold">Learn More About JANGO</h3>
+				<h3 class="c-center c-font-uppercase c-font-bold">Learn More About ColorSailing</h3>
 				<div class="c-line-center"></div>
 			</div>
 			<div class="row">
 				<div class="col-md-4 wow animate slideInUp">
 					<div class="c-media">
-						<img src="assets/base/img/content/misc/jango-intro-3.png" alt=""/>
+						<img src="assets/base/img/content/misc/intro-1.jpg" alt=""/>
 					</div>
 				</div>
 				<div class="col-md-8">
@@ -845,15 +845,16 @@ Contact: zakariaelfakhry@gmail.com
 				<div class="col-sm-4">
 					<div class="c-body">
 						<div class="c-section">
-							<h3>JANGO Inc.</h3>
+							<h3>Color Sailing Advertising EST.</h3>
 						</div>
 						<div class="c-section">
 							<div class="c-content-label c-font-uppercase c-font-bold c-theme-bg">Address</div>
-							<p>25, Lorem Lis Street,<br/>Orange C, California,<br/>United States of America</p>
+							<p>Mohammedia District, <br/> King Abdullah Road, Riyadh,<br/> Kingdom of Saudi Arabia <br><small>facing Mama Nora Restaurant</small></p>
+							<p>الرياض، طريق الملك عبدالله، حي المحمدية، مقابل مطعم ماما نورة</p>
 						</div>
 						<div class="c-section">
 							<div class="c-content-label c-font-uppercase c-font-bold c-theme-bg">Contacts</div>
-							<p><strong>T</strong> 800 123 0000<br/><strong>F</strong> 800 123 8888</p>
+							<p><strong>T</strong> 055 680 97 03<br/><strong>F</strong> 059 792 33 44</p>
 						</div>
 						<div class="c-section">
 							<div class="c-content-label c-font-uppercase c-font-bold c-theme-bg">Social</div><br/>
@@ -861,7 +862,6 @@ Contact: zakariaelfakhry@gmail.com
 								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
-								<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -952,7 +952,7 @@ Contact: zakariaelfakhry@gmail.com
 			<div class="row">
 				<div class="col-md-6 col-sm-6">
 					<p class="c-copyright c-font-oswald c-font-14">
-					Copyright &copy; JANGO Inc.
+					Copyright &copy; Color Sailing Advertising EST.
 					</p>
 				</div>
 				<div class="col-md-6 col-sm-6">
@@ -983,7 +983,7 @@ Contact: zakariaelfakhry@gmail.com
 	<script src="assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript" ></script>
 	<script src="assets/plugins/jquery.easing.min.js" type="text/javascript" ></script>
 	<script src="assets/plugins/reveal-animate/wow.js" type="text/javascript" ></script>
-	<script src="assets/demos/default/js/scripts/reveal-animate/reveal-animate.js" type="text/javascript" ></script>
+	<script src="assets/js/scripts/reveal-animate/reveal-animate.js" type="text/javascript" ></script>
 
 	<!-- END: CORE PLUGINS -->
 
@@ -1018,10 +1018,10 @@ Contact: zakariaelfakhry@gmail.com
 	<!-- END: THEME SCRIPTS -->
 
 			<!-- BEGIN: PAGE SCRIPTS -->
-								<script src="assets/demos/default/js/scripts/revo-slider/slider-4.js" type="text/javascript"></script>
+								<script src="assets/js/scripts/revo-slider/slider-4.js" type="text/javascript"></script>
 											<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLPWnOu970nrxAY1eApfQb0UKBaxov3zg" type="text/javascript"></script>
 											<script src="assets/plugins/gmaps/gmaps.js" type="text/javascript"></script>
-											<script src="assets/demos/default/js/scripts/pages/contact.js" type="text/javascript"></script>
+											<script src="assets/js/scripts/pages/contact.js" type="text/javascript"></script>
 							<!-- END: PAGE SCRIPTS -->
 		<!-- END: LAYOUT/BASE/BOTTOM -->
 </body>
