change title's page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html class="no-js lt-ie9 lt-ie8" lang=en><![endif]--><!--[if IE 8]>
 <html class="no-js lt-ie9" lang=en><![endif]--><!--[if gt IE 8]><!-->
 <html class=no-js lang=zxx><!--<![endif]-->
-<!-- Mirrored from live.envalab.com/html/enva/Style-2/index-waterpipe.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 17 Aug 2018 01:19:39 GMT -->
+
 <meta charset=utf-8>
 <meta content="ie=edge" http-equiv=x-ua-compatible>
-<title>Waterpipe | Coming Soon Style 2</title>
+<title>Color Sailing Advertising | Coming soon- ColorSailing.com</title>
 <meta content="" name=description>
 <meta content="width=device-width,initial-scale=1" name=viewport>
 <link href=favicon.ico rel="shortcut icon" type=image/x-icon>
