--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <!-- send email google script -->
 <!--<script src="https://script.google.com/a/colorsailing.com/macros/s/AKfycbxByj0WUjo5rzFxPZkBn2FU49nf8nbd2sCcbJa2/exec"></script>-->
 <!---->
-<script src=maintenance/js/modernizr-custom.js></script><![endif]-->
+<!-- <script src=maintenance/js/modernizr-custom.js></script><![endif]-->
 <script src=maintenance/js/jquery.min.js></script>
 <script src=maintenance/js/bootstrap.min.js></script>
 <script src=maintenance/js/owl.carousel.min.js></script>
