modify about section

--- a/index.html
+++ b/index.html
@@ -101,9 +101,15 @@
                             <div class="fade tab-pane about-tab" id=about role=tabpanel>
                                 <div class=tab-heading><h2 class=primary-title>About Us</h2></div>
                                 <div class=tab-body>
-                                    <p>Color Sailing Advertising provide high quality and professional advertising services.
-                                    <p>And more recently with more publishing capabilities...</p>
-                                    </div>
+                                    <p>MISSION & VISION
+                                       <p>Color Sailing Advertising EST.
+                                    <p>We are an enterprise with expertise in providing digital printing services, advertising services of all kinds, corporate publications, shields, souvenirs, translation services, etc.</p>
+                                    <br>
+                                    <br>
+                                    <p>مؤسسة ابحار الالوان للدعاية والاعلان
+                                    <p>نحن مؤسسة لديها الخبرة في تقديم خدمات الطباعة الرقمية وخدمات الدعاية والاعلان بكافة انواعها ومطبوعات الشركات والدروع والهدايا التذكارية وخدمات التجمة المختلفة........الخ
+                                    </p>
+                                </div>
                             </div>
                             <div class="fade tab-pane text-center contact-tab" id=contact role=tabpanel>
                                 <div class=tab-heading><h1 class=primary-title>Contact Information</h1>
