correct typo about section

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                     <br>
                                     <br>
                                     <p>مؤسسة ابحار الالوان للدعاية والاعلان
-                                    <p>نحن مؤسسة لديها الخبرة في تقديم خدمات الطباعة الرقمية وخدمات الدعاية والاعلان بكافة انواعها ومطبوعات الشركات والدروع والهدايا التذكارية وخدمات التجمة المختلفة........الخ
+                                    <p>نحن مؤسسة لديها الخبرة في تقديم خدمات الطباعة الرقمية وخدمات الدعاية والاعلان بكافة انواعها ومطبوعات الشركات والدروع والهدايا التذكارية وخدمات الترجمة المختلفة........الخ
                                     </p>
                                 </div>
                             </div>
