correct typo about section

--- a/index.html
+++ b/index.html
@@ -101,14 +101,19 @@
                             <div class="fade tab-pane about-tab" id=about role=tabpanel>
                                 <div class=tab-heading><h2 class=primary-title>About Us</h2></div>
                                 <div class=tab-body>
-                                    <p>MISSION & VISION
-                                       <p>Color Sailing Advertising EST.
-                                    <p>We are an enterprise with expertise in providing digital printing services, advertising services of all kinds, corporate publications, shields, souvenirs, translation services, etc.</p>
+                                    <p>Ebhar Al-Alwan (Color Sailing) Advertising Agency
+                                    <p>We are an Establishment with long experience in providing digital printing services - All types of Advertising services -  company stationery - Shields - Souvenirs - Translation services - Digital and Offset printing services - Master & Doctorate degrees typing and Auditing - Autocad designing, Maps & Sketches printing in color and B & W.......etc
+                                     <p> We have all you can need....
+                                    <p>On the occasion of beginning the new academic year, we will provide our valued customers with free gifts for a month
+
+                                    <p>We are always happy to serve you...
                                     <br>
                                     <br>
                                     <p>مؤسسة ابحار الالوان للدعاية والاعلان
-                                    <p>نحن مؤسسة لديها الخبرة في تقديم خدمات الطباعة الرقمية وخدمات الدعاية والاعلان بكافة انواعها ومطبوعات الشركات والدروع والهدايا التذكارية وخدمات الترجمة المختلفة........الخ
-                                    </p>
+                                    <p>نحن مؤسسة لديها الخبرة في تقديم خدمات الطباعة الرقمية وخدمات الدعاية والاعلان بكافة انواعها من مطبوعات الشركات والدروع والهدايا التذكارية وخدمات الترجمة المختلفة-وخدمات الطباعة والتدقيق لرسائل الماجستير والدكتوراة بالاضافة لتصوير الخرائط والمخططات ملون وعادي........الخ
+                                    <p>لدينا تجدون كل ما يسركم
+                                    <p>                                    وبمناسبة بداية العام الدراسي الجديد نقدم لعملائنا الكرام ولمدة شهر هدايا مجانية
+                                    <p>نسعد بخدمتكم دائماً</p>
                                 </div>
                             </div>
                             <div class="fade tab-pane text-center contact-tab" id=contact role=tabpanel>
